--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,13 +11,18 @@ jobs:
         with:
           submodules: recursive
       - name: Set up JDK 11
-        uses: actions/setup-java@v2
+        uses: actions/setup-java@v4
         with:
           java-version: '11'
           distribution: 'adopt'
-      - name: Unit Tests
-        run: mvn -Dtest=com.napier.devops.AppTest test
-      - name: Package and Run docker compose
-        run: |
-          mvn package -DskipTests
-          docker compose up --abort-on-container-exit
+      - name: Build with Maven
+        run: mvn package
+      - name: Run docker compose
+        run: docker compose up --abort-on-container-exit
+               - name: Unit Tests
+               
+              mvn -Dtest=com.napier.devops.AppTest test
+                - name: Package and Run docker compose
+
+              mvn package -DskipTests
+              docker compose up --abort-on-container-exit
