--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,7 +12,7 @@ jobs:
           submodules: recursive
 
       - name: Set up JDK 11
-        uses: actions/setup-java@v2
+        uses: actions/setup-java@v4
         with:
           java-version: '11'
           distribution: 'adopt'
@@ -20,13 +20,32 @@ jobs:
       - name: Build with Maven
         run: mvn package
 
-      - name: Run docker compose
-        run: docker compose up --abort-on-container-exit
+      - name: Start DB first (detached)
+        run: |
+          docker compose up -d db
+
+      - name: Wait for MySQL to be ready
+        run: |
+          echo "Waiting for MySQL to accept connections..."
+          # Try for up to ~60s
+          for i in {1..30}; do
+            if docker compose exec -T db mysqladmin ping -h 127.0.0.1 -proot --silent; then
+              echo "MySQL is ready"; break; fi; sleep 2; done
+          # Show container list for debugging
+          docker compose ps
 
       - name: Unit Tests
         run: mvn -Dtest=com.napier.devops.AppTest test
 
-      - name: Package and Run docker compose
+      - name: Package and run app (compose)
         run: |
-          mvn package -DskipTests
-          docker compose up --abort-on-container-exit
+          mvn -B -DskipTests package
+          # Run the app container and stop when it exits; make the app's exit code the job's exit code
+          docker compose up --build --abort-on-container-exit --exit-code-from app
+
+      - name: Collect Docker logs
+        if: always()
+        run: |
+          docker compose logs --no-color > docker-logs.txt || true
+          echo "\n===== docker compose logs (tail) =====\n"
+          tail -n 300 docker-logs.txt || true
