--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -55,3 +55,12 @@ jobs:
 
       - name: Run tests
         run: mvn -B clean test
+
+      - name: Upload coverage to Codecov
+        uses: codecov/codecov-action@v4
+        with:
+          token: ${{ secrets.CODECOV_TOKEN }}
+          files: target/site/jacoco/jacoco.xml
+          fail_ci_if_error: true
+          flags: unittests
+          name: java-coverage
