--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,6 @@
 version: '3.8'
 
 services:
-  # App
   app:
     build: .
     depends_on:
@@ -10,7 +9,6 @@ services:
     stdin_open: true
     tty: true
 
-  # DB
   db:
     build: db/.
     restart: always
@@ -19,8 +17,10 @@ services:
       MYSQL_ROOT_HOST: "%"
       MYSQL_DATABASE: world
     ports:
-      - "33060:3306"
+      - "33060:3306"    # or 33061:3306 if you changed it before
     healthcheck:
-      test: ["CMD", "mysqladmin", "ping", "-h", "localhost", "-pexample"]
-      interval: 5s
-      retries: 15
+      test: ["CMD", "mysqladmin", "ping", "-h", "localhost", "-uroot", "-pexample"]
+      interval: 3s
+      timeout: 20s
+      retries: 10
+      start_period: 30s
