--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,7 @@
 version: '3.8'
 
 services:
+  # App
   app:
     build: .
     depends_on:
@@ -9,19 +10,17 @@ services:
     stdin_open: true
     tty: true
 
+  # DB
   db:
-    image: mariadb:10.11             # ← switched to mariadb
+    build: db/.
     restart: always
     environment:
       MYSQL_ROOT_PASSWORD: example
+      MYSQL_ROOT_HOST: "%"
       MYSQL_DATABASE: world
-      MYSQL_ALLOW_EMPTY_PASSWORD: "no"
     ports:
       - "33060:3306"
-    command: --wait-timeout=300
     healthcheck:
-      test: ["CMD", "healthcheck.sh", "--connect", "--innodb_initialized"]
+      test: ["CMD", "mysqladmin", "ping", "-h", "localhost", "-pexample"]
       interval: 5s
-      timeout: 5s
-      retries: 20
-      start_period: 10s
+      retries: 15
