--- a/db/Dockerfile
+++ b/db/Dockerfile
@@ -1,13 +1,14 @@
-# Use the latest MySQL image
+# This image is intended for integration testing and local development.
+# It initialises a MySQL server and imports the provided world dataset on
+# first startup (files under /docker-entrypoint-initdb.d are executed by
+# the official MySQL entrypoint).
 FROM mysql/mysql-server:latest
-# Set the working directory
 WORKDIR /tmp
-# Copy all the files to the working directory of the container
 COPY world-db/world.sql /tmp/
-# Copy the main SQL file to docker-entrypoint-initdb.d.
-# Scripts and SQL files in this folder are executed on container startup.
-# This is specific to MySQL.
 COPY world-db/world.sql /docker-entrypoint-initdb.d
-# Set the root password
+
+# Default credentials used for the CI/test environment. Do not embed
+# production secrets in Dockerfiles; use environment variables or secret
+# managers instead.
 ENV MYSQL_ROOT_PASSWORD=example
 ENV MYSQL_ROOT_HOST=%
